--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "teamwork-frontend",
   "version": "0.1.0",
+    "engines": {
+    "node": ">=12.6.0"
+  },
   "private": true,
   "dependencies": {
     "@types/jest": "^24.0.22",
