Added npm version to the package.json
solves #169713143
see https://www.pivotaltracker.com/story/show/169713143

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "teamwork-frontend",
   "version": "0.1.0",
-    "engines": {
-    "node": ">=12.6.0"
+  "engines": {
+    "node": ">=12.6.0",
+    "npm": ">=6.11.3"
   },
   "private": true,
   "dependencies": {
