--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "serve": "node server.js",
+    "serve": "serve -s build",
     "start": "react-scripts start",
-    "build": "react-scripts build --exit",
+    "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "test:watch": "react-scripts test",
     "eject": "react-scripts eject"
