--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "latest",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "react": "^16.11.0",
@@ -45,7 +46,4 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/react-redux": "^7.1.5"
-  }
 }
