--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "engines": {
     "node": ">=12.6.0",
-    "npm": ">=6.11.3"
+    "npm": ">=6.11.3",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "private": true,
   "dependencies": {
@@ -49,6 +50,18 @@
     ]
   },
   "devDependencies": {
-    "coveralls": "^3.0.7"
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "coveralls": "^3.0.7",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "prettier": "^1.19.1"
   }
 }
