--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: node_js
 node_js:
   - "12.6.0"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
-  npm test -- --coverage
-  npm run build
-  npm run serve
+  - npm test -- --coverage
+  - npm run build
+  - npm run serve
+  - bundle exec rspec
 after_script: # Upload coverage reports 
   - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
