--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "latest",
+    "@types/react-router-dom": "^5.1.2",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
