--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "latest",
     "@types/react-router-dom": "^5.1.2",
     "bootstrap": "^4.3.1",
+    "cross-fetch": "^3.0.4",
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
