--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script:
   - npm test -- --coverage
   - npm run build
 
-after_script:
-  - ./cc-test-reporter after-build -t lcov --exit-code $TRAVIS_TEST_RESULT
+# after_script:
+#  - ./cc-test-reporter after-build -t lcov --exit-code $TRAVIS_TEST_RESULT
