--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "jest-fetch-mock": "^2.1.2"
   },
   "scripts": {
     "serve": "serve -s build",
