--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "latest",
     "@types/react-router-dom": "^5.1.2",
+    "@types/redux-mock-store": "^1.0.1",
     "bootstrap": "^4.3.1",
     "cross-fetch": "^3.0.4",
     "express": "^4.17.1",
+    "jest-fetch-mock": "^2.1.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
@@ -24,9 +26,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.2",
-    "jest-fetch-mock": "^2.1.2"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "serve": "serve -s build",
