--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 before_script:
   - npm install
   - npm install nyc -g
+  - npm run coveralls
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
