--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ env:
 before_script:
   - npm install
   - npm install nyc -g
-  - npm run coveralls
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
   
 script:
-#  - npm test -- --coverage
+  - npm test -- --coverage
   - npm run build
+  - npm run coveralls
 
 after_script:
  - ./cc-test-reporter after-build -t lcov --exit-code $TRAVIS_TEST_RESULT
