--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ language: node_js
 node_js:
   - "12.6.0"
 env:
-  - NODE_ENV="test"
-  - BACKEND_URL="https://capstone-project-teamwork.herokuapp.com/api/v1"
+  - NODE_ENV="test" && BACKEND_URL="https://capstone-project-teamwork.herokuapp.com/api/v1"
 
 before_script:
   - npm install
